--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World 1 </h1>
-<p>I'm hosted with GitHub Pages 1111.</p>
+<h1>Test Site - test.github.io</h1>
+<p>test.github.io</p>
 </body>
 </html>
