--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Test Site - test.github.io</h1>
-<p>test.github.io</p>
+<h1>Test Site - test.optimusconsultants.com</h1>
+<p>test.optimusconsultants.com</p>
 </body>
 </html>
